chore: added OTEL, fixed swagger-ui